--- a/mobile.Rmd
+++ b/mobile.Rmd
@@ -30,23 +30,96 @@ landline <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/t
 landline%>%add_n_miss()%>% arrange(desc(n_miss_all))
 ```
 
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+landline%>%drop_na(landline_subs)%>%group_by(entity)%>%
+  fill(total_pop,gdp_per_cap, .direction = "up")%>%
+  ggplot(aes(x=year,
+             y=landline_subs,
+             group=entity,
+             color=continent))+
+  geom_line()+facet_wrap(vars(continent))+
+  gghighlight(max(landline_subs>100))+
+  theme(legend.position = "none")
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+world_map <-map_data("world")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r,eval=FALSE}
+world_map <-map_data("world")
+
+landline %>% 
+  drop_na(landline_subs) %>% 
+  group_by(entity) %>% 
+  fill(total_pop, gdp_per_cap, .direction = "up") %>% 
+  ggplot() +
+  geom_polygon(map = world_map,aes(map_id = entity,fill = landline_subs,group=year)) +
+  #This assures the map looks decently nice:
+  expand_limits(x = world_map$long, y = world_map$lat) + 
+  theme_map() +
+  theme(legend.background = element_blank(),
+        plot.background = element_rect("gray70")) +
+  transition_states(year) +
+  labs(title = "Landlines subscriptions per 100 people",
+       subtitle = "Year: {closest_state}",
+       caption = "Data from Ourworldindata.org, viz by @lisalendway")
+  
+anim_save("landline_over_time.gif", path = "images/")
+
+
+```
+  
+  
+```{r} 
+  
+  world_map <-map_data("world")
+  
+   mobile%>%
+   drop_na(mobile_subs)%>%
+   group_by(entity)%>%
+   fill(total_pop,gdp_per_cap,.direction="up")%>%
+   ggplot()+
+   geom_map(map=world_map,
+            aes(map_id=entity,fill = mobile_subs,
+               group = year)) +
+  #This assures the map looks decently nice:
+  expand_limits(x = world_map$long, y = world_map$lat) + 
+  theme_map() +
+  theme(legend.background = element_blank(),
+        plot.background = element_rect("#F8F3ED")) +
+  transition_states(year) +
+  labs(title = "Mobile subscriptions per 100 people",
+       subtitle = "Year: {closest_state}",
+       caption = "Data from Ourworldindata.org, viSUAL by MARTIN")
+  
+anim_save("mobile_over_time.gif", path = "images/")
+```
+  
+  
+```{r,eval=FALSE}
+   world_map <- map_data("world")
+landline %>% 
+  drop_na(landline_subs) %>% 
+  group_by(entity) %>% 
+  fill(total_pop, gdp_per_cap, .direction = "up") %>% 
+  inner_join(world_map,
+             by = c("entity"="region")) %>% 
+ # filter(year == 2010) %>% 
+  ggplot() +
+  geom_polygon(aes(x = long,
+                   y = lat,
+                   group = group,
+                   fill = landline_subs)) +
+  #This assures the map looks decently nice:
+  expand_limits(x = world_map$long, 
+                y = world_map$lat) + 
+  theme_map() +
+  theme(legend.background = element_blank(),
+        plot.background = element_rect("gray70")) +
+  transition_time(year) +
+  labs(title = "Landlines subscriptions per 100 people",
+       subtitle = "Year: {frame_time}",
+       caption = "Data from Ourworldindata.org, vISUAL BY MARTIN")
+```
