--- a/mobile.Rmd
+++ b/mobile.Rmd
@@ -64,7 +64,7 @@ landline %>%
   transition_states(year) +
   labs(title = "Landlines subscriptions per 100 people",
        subtitle = "Year: {closest_state}",
-       caption = "Data from Ourworldindata.org, viz by @lisalendway")
+       caption = "Data from Ourworldindata.org, viz by @MARTIN")
   
 anim_save("landline_over_time.gif", path = "images/")
 
@@ -92,7 +92,7 @@ anim_save("landline_over_time.gif", path = "images/")
   transition_states(year) +
   labs(title = "Mobile subscriptions per 100 people",
        subtitle = "Year: {closest_state}",
-       caption = "Data from Ourworldindata.org, viSUAL by MARTIN")
+       caption = "Data from Ourworldindata.org, visual by MARTIN")
   
 anim_save("mobile_over_time.gif", path = "images/")
 ```
